--- a/Function/BilibiliAutoRegion.conf
+++ b/Function/BilibiliAutoRegion.conf
@@ -8,6 +8,6 @@
 ###################################
 
 
-hostname = ap?.bilibili.com, ap?.biliapi.net
+hostname = ap?.bili*i.*
 
 ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
