--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        BiliBili_AdBlock_DIY
+// @ScriptName        哔哩哔哩净化[墨鱼版]
 // @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang, @kokoryh
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @TaiWanBilibili    https://apps.apple.com/tw/app/id1517062289
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-04-08
-// @ConfigVersion     V2.0.113
+// @ConfigVersion     V2.0.114
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
