--- a/Function/Bilibili_CC.conf
+++ b/Function/Bilibili_CC.conf
@@ -1,14 +1,20 @@
 // ==UserScript==
-// @Name              哔哩哔哩繁体CC字幕转中文简体
-// @Author            Cuttlefish
-// @TgChannel         https://t.me/ddgksf2021
+// @ScriptName        哔哩哔哩繁体CC字幕转中文简体[墨鱼版]
+// @Author            @ddgksf2013
+// @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          墨鱼手记
-// @UpdateTime        2022-11-28
+// @TgChannel         https://t.me/ddgksf2021
+// @Contribute        https://t.me/ddgksf2013_bot
+// @Feedback          📮 ddgksf2013@163.com 📮
+// @UpdateTime        2023-04-11
+// @Suitable          自行观看“# > ”注释内容
+// @Attention         如需引用请注明出处，谢谢合作！
+// @Version           V1.0.10
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Function/Bilibili_CC.conf
 // ==/UserScript==
 
 
-hostname=*.hdslb.com
+hostname = aisubtitle.hdslb.com
 
-# ～ 嗶哩嗶哩繁體CC字幕轉中文簡體（2022-04-02）@ddgksf2013
-^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
+# > 哔哩哔哩繁体CC字幕转中文简体（2023-04-11）@ddgksf2013
+^https?:\/\/aisubtitle\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
