--- a/Function/Bilibili_CC.conf
+++ b/Function/Bilibili_CC.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-04-11
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.10
+// @Version           V1.0.11
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Function/Bilibili_CC.conf
 // ==/UserScript==
 
@@ -17,4 +17,4 @@
 hostname = aisubtitle.hdslb.com
 
 # > 哔哩哔哩繁体CC字幕转中文简体（2023-04-11）@ddgksf2013
-^https?:\/\/aisubtitle\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
+^https?:\/\/aisubtitle\.hdslb\.com\/bfs\/subtitle\/.+\.json url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
