--- a/Function/Bilibili_CC.conf
+++ b/Function/Bilibili_CC.conf
@@ -6,15 +6,15 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-04-11
+// @UpdateTime        2023-04-13
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.11
+// @Version           V1.0.12
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Function/Bilibili_CC.conf
 // ==/UserScript==
 
 
-hostname = aisubtitle.hdslb.com
+hostname = aisubtitle.hdslb.com,i0.hdslb.com
 
 # > 哔哩哔哩繁体CC字幕转中文简体（2023-04-11）@ddgksf2013
-^https?:\/\/aisubtitle\.hdslb\.com\/bfs\/subtitle\/.+\.json url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
+^https?:\/\/.*\.hdslb\.com\/bfs\/subtitle\/.+\.json url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_cc.js
