--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-04-11
+// @UpdateTime        2023-04-15
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.77
+// @Version           V2.0.78
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -82,6 +82,7 @@
 # [+]2023-03-31  63、修复微博开屏广告屏蔽失效的bug
 # [+]2023-04-02  64、去除微博超话[广场]tab页面顶部广告推送以及搜索框下方的“我的热搜”内容
 # [+]2023-04-11  65、移除视频20s预览的限制
+# [+]2023-04-15  66、修复超话个人页面无法打开的问题
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
 
