--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -10,7 +10,7 @@
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.78
+// @Version           V2.0.79
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -82,6 +82,7 @@
 # [+]2023-04-02  64、去除微博超话[广场]tab页面顶部广告推送以及搜索框下方的“我的热搜”内容
 # [+]2023-04-11  65、移除视频20s预览的限制
 # [+]2023-04-15  66、修复超话个人页面无法打开的问题
+# [+]2023-04-16  67、针对用户反馈的开屏广告预加载问题[已有缓存]进行处理
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
@@ -91,11 +92,12 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 ; host, sdkapp.uve.weibo.com, direct
 
 
-
+# > 微博_开屏广告预加载处理@ddgksf2013
+^https?:\/\/boot.*weibo\.com\/v\d\/ad\/preload url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_未登陆状态下首页信息流处理@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/\w{5}\/(statuses_unread_hot_timeline|timeline) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_每日一次的开屏广告请求@ddgksf2013
-^https?:\/\/boot.*weibo\.com\/v\d\/ad url reject-200
+^https?:\/\/boot.*weibo\.com\/v\d\/ad\/realtime url reject-200
 # > 微博_视频信息处理@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/video\/tiny_stream_mid_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_去除底部超话栏表层浮icon及tips@ddgksf2013
