--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -10,7 +10,7 @@
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.79
+// @Version           V2.0.80
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -82,7 +82,7 @@
 # [+]2023-04-02  64、去除微博超话[广场]tab页面顶部广告推送以及搜索框下方的“我的热搜”内容
 # [+]2023-04-11  65、移除视频20s预览的限制
 # [+]2023-04-15  66、修复超话个人页面无法打开的问题
-# [+]2023-04-16  67、针对用户反馈的开屏广告预加载问题[已有缓存]进行处理
+# [+]2023-04-16  67、针对用户反馈的开屏广告预加载问题[已有缓存的情况下]进行处理
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
