--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.04.16\/v2.0.296 url reject
+^https?:\/\/2023.04.16\/v2.0.297 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -589,7 +589,7 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
 # > yingshiyun
 ^https?:\/\/i\.ys7\.com\/api\/ads\/ url reject
 # > yuxueyuan
-^https?:\/\/.*\.yuxueyuan\.cn\/yxy-api-gateway\/api\/json\/advert\/getsAdStartScreen url reject
+^https?:\/\/.*\.yuxueyuan\.cn\/yxy-api-gateway\/api\/json\/advert\/getsAdStartScreen url reject-200
 
 
 # ======= Z ======= #
