--- a/Html/NewBing.conf
+++ b/Html/NewBing.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        解锁NewBing搜索[墨鱼版]
-// @Author            @ddgksf2013
+// @Author            @ddgksf2013, @NobyDa
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
