--- a/Html/NewBing.conf
+++ b/Html/NewBing.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-04-16
 // @Function          适用手机端Safari、Alook、Chrome
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.1
+// @Version           V1.0.3
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Html/NewBing.conf
 // ==/UserScript==
 
@@ -17,4 +17,4 @@
 
 hostname = www.bing.com
 
-^https:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
+^https?:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
