--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.04.16\/v2.0.297 url reject
+^https?:\/\/2023.04.16\/v2.0.298 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -296,7 +296,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 https://open3.vistastory.com/v3/api/index/loading_ad url reject
 https://open3.vistastory.com/v3/api.*get_popup url reject
 # > kuake
-^https?:\/\/open-cms-api\.uc\.cn\/open-cms url reject-dict
+^https?:\/\/open-cms-api\.uc\.cn\/open-cms url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/quark.js
 # > kuaishou
 ^https:\/\/open\.e\.kuaishou\.com\/rest\/e\/v3\/open\/univ url reject
 
