--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -509,8 +509,8 @@ https://mapi.appvipshop.com/vips-mobile/rest/activity/advertisement/get url reje
 # > WangYiYanXuan
 https://support.you.163.com/appversync/check.do url reject
 ^https?:\/\/support\.you\.163\.com\/xhr\/boot\/getBootMedia\.json url reject
-^https?:\/\/yanxuan.nosdn.127.net\/(static-union\/)?.*\.gif url reject
-https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject
+; ^https?:\/\/yanxuan.nosdn.127.net\/(static-union\/)?.*\.gif url reject
+^https?:\/\/yanxuan\.nosdn\.127\.net\/.*\.mp4 url reject
 # > WeChat110
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js
 # > weixindaihuo
