--- a/Html/WebAdBlock.conf
+++ b/Html/WebAdBlock.conf
@@ -23,7 +23,7 @@ hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18com
 ^https?:\/\/.*bdys.*com\/($|([a-z]+)\/(play\/)?\d+.*$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bdys.js
 
 # > 12 茶杯狐[网页优化]@ddgksf2013 - 网站地址：https://cupfox.app
-^https?:/\/.*cupfox\.app\/($|(search|list|s|_next).*$) url script-response-body https://cdn.jsdelivr.net/gh/ddgksf2013/Html@main/cupbox.css
+^https?:/\/.*cupfox\.app\/($|(search|list|s|_next).*$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/cupbox.js
 
 # > 11 Cokemv[网页优化]@ddgksf2013 - 网站地址：https://cokemv.me 
 ^https?:/\/cokemv\.me\/($|vod.*$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/cokemv.js
