--- a/Function/BilibiliAutoRegion.conf
+++ b/Function/BilibiliAutoRegion.conf
@@ -5,9 +5,11 @@
 # 2022-01-08 作者已修复该bug，换回作者链接
 # 2022-10-16 国区粉色APP已无法通过搜索来切换港澳台区域
 # 2023-04-08 去除视频播放页内推广
+# 2023-04-24 补上搜索换区重写（仅适用白色哔哩哔哩）
 ###################################
 
 
 hostname = ap?.bili*i.*
 
+^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
 ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
