--- a/Function/BilibiliAutoRegion.conf
+++ b/Function/BilibiliAutoRegion.conf
@@ -10,6 +10,7 @@
 
 
 hostname = ap?.bili*i.*
-
+# > 关键词+空格+[港|台|中]
 ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
-^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/offline\/version)\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
+# > 视频播放页去广告+自动换区
+^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/pgc\/view\/v\d\/app\/season url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_switch.js
