--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -1,16 +1,16 @@
 // ==UserScript==
-// @ScriptName        高德地图☆净化
+// @ScriptName        高德地图[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-04-15
+// @UpdateTime        2023-04-25
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.20
+// @Version           V1.0.21
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 // ==/UserScript==
 
@@ -18,10 +18,8 @@
 hostname=*.amap.com
 
 
-# > 高德地图_请自行添加本地分流@ddgksf2013
-;host, amdc.m.taobao.com, reject
-
-
+# > 高德地图_amdc处理[Anti已将Amdc分流删除,故更换屏蔽策略]@ddgksf2013
+^http:\/\/amdc\.m\.taobao\.com url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amdc.js
 # > 高德地图_底部tab栏角标@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/message\/notice\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_路线规划下方广告@ddgksf2013
