--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        高德地图[墨鱼版]
+// @ScriptName        高德地图净化[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
@@ -10,7 +10,7 @@
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.21
+// @Version           V1.0.22
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 // ==/UserScript==
 
