--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023-04-17
+// @UpdateTime        2023-04-27
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.04.17\/v2.0.299 url reject
+^https?:\/\/2023.04.27\/v2.0.300 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -510,6 +510,7 @@ https://mapi.appvipshop.com/vips-mobile/rest/activity/advertisement/get url reje
 # > WangYiYanXuan
 https://support.you.163.com/appversync/check.do url reject
 ^https?:\/\/support\.you\.163\.com\/xhr\/boot\/getBootMedia\.json url reject
+^https?:\/\/m\.you\.163\.com\/activity\/popWindow url reject
 ; ^https?:\/\/yanxuan.nosdn.127.net\/(static-union\/)?.*\.gif url reject
 ^https?:\/\/yanxuan\.nosdn\.127\.net\/.*\.mp4 url reject
 # > WeChat110
