--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -84,6 +84,9 @@
 # [+]2023-04-15  66、修复超话个人页面无法打开的问题
 # [+]2023-04-16  67、针对用户反馈的开屏广告预加载问题[已有缓存的情况下]进行处理
 # [+]2023-04-16  68、针对用户反馈的微博国际版内容搜索不全问题进行处理
+# [+]2023-04-27  69、在已有缓存的情况下去除微博搜索框下方的'猜你想搜'、'我的热搜'、'猜你想搜偏好设置'等内容
+
+
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
