--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.04.27\/v2.0.301 url reject
+^https?:\/\/2023.04.27\/v2.0.302 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -58,6 +58,8 @@
 ^https?:\/\/sso.ifanr.com\/jiong\/IOS\/appso\/splash\/ url reject
 # > alibaba
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alibaba\.advertisementservice\.getadv\/ url reject
+# > amdc
+^http:\/\/amdc\.m\.taobao\.com url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amdc.js
 
 
 # ======= B ======= #
