--- a/AdBlock/Ximalaya.conf
+++ b/AdBlock/Ximalaya.conf
@@ -1,22 +1,24 @@
 // ==UserScript==
-// @ScriptName        喜马拉雅_AdBlock
+// @ScriptName        喜马拉雅[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2022-12-31
+// @UpdateTime        2023-05-03
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
+// @Version           V1.0.24
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 // ==/UserScript==
 
 
 hostname = *.xima*.*, *.xmcdn.*
-
+# ～ XiMaLaYa_喜马拉雅_首页顶部去除直播@ddgksf2013
+^https?:\/\/.*\.xima.*\.com\/discovery-category\/customCategories url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xmly_json.js
 # ～ XiMaLaYa_喜马拉雅_修复轮播Ad失效Bug@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF url reject
 # ～ XiMaLaYa_喜马拉雅_播放页_Live@ddgksf2013
