--- a/AdBlock/Ximalaya.conf
+++ b/AdBlock/Ximalaya.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        喜马拉雅[墨鱼版]
+// @ScriptName        喜马拉雅净化[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
@@ -11,7 +11,7 @@
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.24
+// @Version           V1.0.25
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 // ==/UserScript==
 
