--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023-04-27
+// @UpdateTime        2023-05-03
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -35,11 +35,12 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.04.27\/v2.0.302 url reject
+^https?:\/\/2023.05.03\/v2.0.303 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
 ^https?:\/\/run\.api\.qyfxgd\.cn:9313\/api\/v1\/advert url reject
+^https?:\/\/run\.api\.qyfxgd\.cn:\d+\/api\/v\d\/movie\/index_recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/555Ad.js
 # > 12123
 ^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
 # > 36kr
