--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,11 +35,11 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.05.03\/v2.0.303 url reject
+^https?:\/\/2023.05.03\/v2.0.304 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
-^https?:\/\/run\.api\.qyfxgd\.cn:9313\/api\/v1\/advert url reject
+^https?:\/\/run\.api\.qyfxgd\.cn:\d+\/api\/v1\/advert url reject
 ^https?:\/\/run\.api\.qyfxgd\.cn:\d+\/api\/v\d\/movie\/index_recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/555Ad.js
 # > 12123
 ^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
