--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-05-14
+// @UpdateTime        2023-05-19
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.23
+// @Version           V1.0.24
 // @RewriteURL        https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -44,7 +44,7 @@ hostname = interface*.music.163.com
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/link\/scene\/show\/resource url reject-dict
 # > 网易云_搜索框推荐
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/default url reject-dict
-# > 网易云_评论区下方广告
+# > 网易云_评论区下方广告[新版失效]
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/comment\/feed\/inserted url reject-dict
 # > 网易云_评论回复区广告
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/v1\/content\/exposure\/comment url reject-dict
