--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-05-19
+// @UpdateTime        2023-05-20
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.25
+// @Version           V1.0.26
 // @RewriteURL        https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -23,7 +23,8 @@
 
 hostname = interface*.music.163.com 
 
-
+# > 网易云_评论弹窗
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/music\/partner\/picked\/user\/top url reject-dict
 # > 网易云_位置请求
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/lbs\/gpsStatus\/upload url reject-dict
 # > 网易云_每日推荐Tips
