--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023-05-21
+// @UpdateTime        2023-05-26
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.05.21\/v2.0.309 url reject
+^https?:\/\/2023.05.26\/v2.0.311 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -349,10 +349,9 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https://mapi.mafengwo.cn\/ad\/get_launch_ad_list\/v2 url reject
 # > MaiDuiDui
 ^https?:\/\/mob\.mddcloud\.com\.cn\/adApi\/advert url reject
-# > ManHuaRen
-^https?:\/\/.*mangaapi\.manhuaren\.*\/(v2\/public\/getStartUpMessage|v1\/public\/getStartPageAds) url reject
-^https?:\/\/.*mangaapi\.manhuaren\.*\/v2\/ad\/getMultiAdsStrategy url reject
-^https?:\/\/.*mangaapi\.manhuaren\.*\/v2\/public\/getShelfActivity url reject
+# > manhuaren
+^https?:\/\/.*mangaapi\.manhuaren\.\w{2,4}\/v\d\/public\/(getStartUpMessage|getStartPageAds|getShelfActivity) url reject
+^https?:\/\/.*mangaapi\.manhuaren\.\w{2,4}\/v\d\/ad url reject
 # > MIX
 ^https:\/\/dispatcher\.camera360\.com\/api\/v1\/list$ url reject
 # > MaKaLong
