--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -36,12 +36,12 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.05.26\/v2.0.312 url reject
+^https?:\/\/2023.05.26\/v2.0.313 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
-^https?:\/\/run\.api\.qyfxgd\.cn:\d+\/api\/v1\/advert url reject
-^https?:\/\/run\.api\.qyfxgd\.cn:\d+\/api\/v\d\/movie\/index_recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/555Ad.js
+^https?:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}:\d+\/api\/v\d\/advert url reject
+^https?:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}:\d+\/api\/v\d\/movie\/index_recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/555Ad.js
 # > 12123
 ^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
 # > 36kr
