--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-05-27
-// @ConfigVersion     V2.0.120
+// @ConfigVersion     V2.0.122
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -80,10 +80,13 @@
 //2023-04-09 57、新增移除视频播放页[view/view]下方的activityUrl/reqUser/specialCell/refreshSpecialCell等元素
 //2023-04-27 58、修复视屏播放页UP主显示未关注问题[即已关注点开视屏却显示未关注]
 //2023-05-27 59、新增去除交互点赞投票弹幕、青少年弹窗@Maasea，由于QX目前还不支持MITM H2，故新版使用可能存在问题[具体可参考https://t.me/ddgksf2021/3749]，这里推荐使用V7.22.0
+//2023-05-27 60、新增去除BiliBili搜索页广告
 
 
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
 
+# ～ BiliBili_哔哩哔哩_搜索去广告@BiliUniverse
+^https?:\/\/(grpc\.biliapi\.net|app\.bilibili\.com)\/bilibili\.polymer\.app\.search\.v1\.Search\/SearchAll$ url script-response-body https://raw.githubusercontent.com/BiliUniverse/ADBlock/main/js/BiliBili.ADBlock.response.js
 # ～ BiliBili_哔哩哔哩_交互点赞投票弹幕@Maasea
 ;^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.community\.service\.dm\.v1\.DM\/DmView url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Bilibili/bilibili.helper.beta.js
 # ～ BiliBili_哔哩哔哩_青少年弹窗@Maasea
