--- a/AdBlock/WeChat.conf
+++ b/AdBlock/WeChat.conf
@@ -1,13 +1,15 @@
 // ==UserScript==
-// @ScriptName        公众号去广告
+// @ScriptName        微信去广告
 // @Author            @ddgksf2021
 // @TgChannel         https://t.me/ddgksf2021
 // @Function          Block AD
-// @ScriptTime        2023-01-02
+// @ScriptTime        2023-06-02
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/WeChat.conf
 // ==/UserScript==
 
-# > WeChat Official Account
+# > 微信去广告[不包含公众号信息流AD、朋友圈AD]
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/(advertisement_report|cps_product_info|wapcommreport|jsreport|jsmonitor|getappmsgext) url reject
+^https?:\/\/wxa\.wxs\.qq\.com\/tmpl\/kf\/base_tmpl\.html url reject
 
-hostname=mp.weixin.qq.com
+hostname=wxa.wxs.qq.com, mp.weixin.qq.com
