--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -6,9 +6,9 @@
 // @WechatID          公众号墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
-// @MainFunction      去开屏、瀑布流、启动服务广告及一些隐私、广告、青少年请求
+// @MainFunction      去开屏、瀑布流、启动服务广告及一些隐私、广告、青少年请求，去水印及功能增强
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-03-07
+// @UpdateTime        2023-06-03
 // @Function          去广告配置（自用，不定期更新）
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
@@ -16,8 +16,14 @@
 // ==/UserScript==
 
 
-hostname = edith.xiaohongshu.com,www.xiaohongshu.com,pages.xiaohongshu.com,referee.xiaohongshu.com
+hostname = edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com
 
+# > 小红书_短视频流去水印+强制开启保存功能@ddgksf2013
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/redtube\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
+# > 小红书_信息流视频去水印+强制开启保存功能@ddgksf2013
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/videofeed\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
+# > 小红书_信息流图片去水印@ddgksf2013
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/feed\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_开屏广告@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash_config url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_首页瀑布流@ddgksf2013
