--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -18,6 +18,8 @@
 
 hostname = edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com
 
+# > 小红书_视频播放页商品推广@ddgksf2013
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/widgets url reject-dict
 # > 小红书_短视频流去水印+强制开启保存功能@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/redtube\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_信息流视频去水印+强制开启保存功能@ddgksf2013
