--- a/AdBlock/WeChat.conf
+++ b/AdBlock/WeChat.conf
@@ -3,7 +3,7 @@
 // @Author            @ddgksf2013
 // @TgChannel         https://t.me/ddgksf2021
 // @Function          Block AD
-// @ScriptTime        2023-06-02
+// @ScriptTime        2023-06-04
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/WeChat.conf
 // ==/UserScript==
 
@@ -12,5 +12,5 @@ hostname=wxa.wxs.qq.com, mp.weixin.qq.com
 
 # > 微信去广告[不包含公众号信息流AD、朋友圈AD]
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/(advertisement_report|cps_product_info|wapcommreport|jsreport|jsmonitor|getappmsgext) url reject
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/(advertisement_report|cps_product_info|wapcommreport|jsreport|jsmonitor) url reject
 ^https?:\/\/wxa\.wxs\.qq\.com\/tmpl\/kf\/base_tmpl\.html url reject
