--- a/UnlockVip/Spotify.conf
+++ b/UnlockVip/Spotify.conf
@@ -2,7 +2,8 @@
 #应用名称：  Spotify
 #脚本作者：  app2smile
 #更新时间：  2022-06-13
-#使用说明：  解锁部分premium,建议重新登录,并清除缓存,音质不能设置为超高。功能：1.去除播放广告；2.歌手/专辑列表正常展示；3.去除随机播放
+#使用说明：  解锁部分premium,建议重新登录,并清除缓存,音质不能设置为超高。
+#脚本功能：  1.去除播放广告；2.歌手/专辑列表正常展示；3.去除随机播放
 #通知频道：  https://t.me/ddgksf2021
 #作者库地：  https://github.com/app2smile/rules
 #脚本地址：  https://github.com/ddgksf2013/Rewrite/raw/master/UnlockVip/Spotify.conf
