--- a/AdBlock/WeChat.conf
+++ b/AdBlock/WeChat.conf
@@ -11,4 +11,4 @@
 hostname=wxa.wxs.qq.com, mp.weixin.qq.com
 
 # > 微信去广告[不包含公众号信息流AD、朋友圈AD]
-^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
