--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -36,7 +36,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.06.14\/v2.0.320 url reject
+^https?:\/\/2023.06.14\/v2.0.321 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -528,7 +528,7 @@ https://support.you.163.com/appversync/check.do url reject
 # > weixindaihuo
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/cps_product_info url reject
 # > WeChat
-^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
 # > Weifeng
 ^https?:\/\/api\.wfdata\.club\/v2\/yesfeng\/(infoCenterAd|yesList) url reject
 #^https?:\/\/api\.wfdata\.club\/v\d\/search\/hot\? url response-body dataList":\[.+\] response-body dataList":[{}]
