--- a/Html/WebAdBlock.conf
+++ b/Html/WebAdBlock.conf
@@ -16,7 +16,7 @@
 
 hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18comic.org,*5y*,*gimy*,*tkznp*,*czspp*,*ikandy*,*libvio*
 
-# > 14 奈飞鸭[网页优化]@ddgksf2013 - 网站地址：https://yanetflix.com [失效]
+# > 14 奈飞鸭[网页优化]@ddgksf2013 - 网站地址：https://yanetflix.com [未测试]
 ^https?:\/\/.*netflix.*\/($|[0-9a-zA-Z=_/-]+\.html$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/netflix.js
 
 # > 13 哔嘀影视[网页优化]@ddgksf2013 - 网站地址：https://www.bdys01.com 
@@ -47,11 +47,11 @@ hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18com
 # > 05 剧迷[网页优化]@ddgksf2013 - 网站地址：https://gimys.app
 ^https?:\/\/.*gimy.*\/($|[0-9a-zA-Z=_/-]+\.html$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/gimytv.js
 
-# > 04 天空影视[网页优化]@ddgksf2013 - 网站地址：https://tkznp.com/ [失效]
+# > 04 天空影视[网页优化]@ddgksf2013 - 网站地址：https://tkznp.com/ [未测试]
 ^https?:\/\/.*tkznp.*com\/($|[0-9a-zA-Z=_/-]+\.html$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/tkys.js
 
-# > 03 厂长电影[网页优化]@ddgksf2013 - 网站地址：https://www.czspp.com/
-^https?:/\/.*czspp.*com\/($|\?btwaf=\w+$|[0-9a-zA-Z=_/-]+\.html) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/qianoo.js
+# > 03 厂长电影[网页优化]@ddgksf2013 - 网站地址：https://czzy.art/
+^https?:/\/.*czzy.*\/($|\?btwaf=\w+$|[0-9a-zA-Z=_/-]+\.html) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/qianoo.js
 
 # > 02 真不卡[网页优化]@ddgksf2013 - 网站地址：https://www.ikandy.fun
 ^https?:\/\/.*ikandy.*fun\/($|(vod|top).*$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhenbuka.js
