--- a/Html/WebAdBlock.conf
+++ b/Html/WebAdBlock.conf
@@ -14,7 +14,7 @@
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Html/WebAdBlock.conf
 // ==/UserScript==
 
-hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18comic.org,*5y*,*gimy*,*tkznp*,*czspp*,*ikandy*,*libvio*
+hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18comic.org,*5y*,*gimy*,*tkznp*,*czzy*,*ikandy*,*libvio*
 
 # > 14 奈飞鸭[网页优化]@ddgksf2013 - 网站地址：https://yanetflix.com [未测试]
 ^https?:\/\/.*netflix.*\/($|[0-9a-zA-Z=_/-]+\.html$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/netflix.js
