--- a/Html/WebAdBlock.conf
+++ b/Html/WebAdBlock.conf
@@ -51,7 +51,7 @@ hostname=*netflix*, *bdys*,*cupfox*,*cokemv*,*pornhub.com,*lezhutv*,*bimi*,18com
 ^https?:\/\/.*tkznp.*com\/($|[0-9a-zA-Z=_/-]+\.html$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/tkys.js
 
 # > 03 厂长电影[网页优化]@ddgksf2013 - 网站地址：https://czzy.art/
-^https?:/\/.*czzy.*\/($|\?btwaf=\w+$|[0-9a-zA-Z=_/-]+\.html) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/qianoo.js
+^https?:\/\/.*czzy.*\/($|\?btwaf=\w+$|[0-9a-zA-Z=_/-]+\.html) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/qianoo.js
 
 # > 02 真不卡[网页优化]@ddgksf2013 - 网站地址：https://www.ikandy.fun
 ^https?:\/\/.*ikandy.*fun\/($|(vod|top).*$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhenbuka.js
