--- a/AdBlock/Applet.conf
+++ b/AdBlock/Applet.conf
@@ -14,7 +14,7 @@
 
 # 搜罗好货、小野分享、天泽后花园、黑科技软件、酸鸡汤,老爷花苑,御花园、森茂雅苑、小纸箱助手、free 黑科技
 # 科技窝、APP基地、AShare、不完全指北、森茂小苑、电视盒子君、公子黑科技、世颜说、搞机师兄、火箭软件库
-# 天书乱谈、老胡群英会、天泽百宝箱、老鬼黑科技、黑科技软件源、天书X乱谈、图层黑科技
+# 天书乱谈、老胡群英会、天泽百宝箱、老鬼黑科技、黑科技软件源、天书X乱谈、图层黑科技、掌上公交、顺丰速运
 
 
 hostname = www.bbkj.work, wx.wxqqurl.cn, wp3.lobdol.cn, awg.enmonster.com, mp.weixin.qq.com, wx.mygolbs.com, jabi.coding.net, api.bspapp.com, 3dd0be8a-54fe-43ff-a0e7-f670c4f20432.bspapp.com, *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, *.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, jt.jxjt888.top, gjsx.vip, d.syshhc.top, gz.gongzijx.com, tvapp.guilaile.cn, www.benbenfx.xyz, 4thdimension.top, api.bspapp.com, tan.ipnas.ltd
