--- a/AdBlock/Applet.conf
+++ b/AdBlock/Applet.conf
@@ -24,11 +24,11 @@ hostname = api.blibee.com, ucmp.sf-express.com, www.bbkj.work, wx.wxqqurl.cn, wp
 
 
 
-# > 便利蜂_屏蔽弹窗@ddgksf2013
+# > 小程序_便利蜂@ddgksf2013
 ^https?:\/\/api\.blibee\.com\/cvsnotify-api\/cvs\/notify\/app\/banner\/v\d+$ url reject-200
-# > 顺丰速运_去广告@ddgksf2013
+# > 小程序_顺丰速运@ddgksf2013
 ^https?:\/\/ucmp\.sf-express\.com\/proxy\/operation-platform\/info-flow-adver\/query$ url reject-200
-# > 公众号图文去广告@ddgksf2013
+# > 公众号_图文去广告@ddgksf2013
 ^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
 # > 小程序_掌上公交@ddgksf2013
 ^https?:\/\/wx\.mygolbs\.com\/WxBusServer\/ApiData\.do url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhangshanggongjiao.js
