--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -295,7 +295,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # > jianhanglife
 ^https?:\/\/yunbusiness\.ccb\.com\/clp_service\/txCtrl\?txcode=A3341A00(2|9) url reject
 # > jike
-^https?:\/\/mgw\.mpaas\.cn-hangzhou\.aliyuncs\.com\/mgw\.htm url reject
+;^https?:\/\/mgw\.mpaas\.cn-hangzhou\.aliyuncs\.com\/mgw\.htm url reject
 
 
 # ======= K ======= #
