--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        哔哩哔哩净化[墨鱼版]
-// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang, @kokoryh, @Maasea
+// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang, @kokoryh, @Maasea, @BiliUniverse
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @TaiWanBilibili    https://apps.apple.com/tw/app/id1517062289
 // @HKBilibili        https://apps.apple.com/hk/app/id1517062289
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-08-17
-// @ConfigVersion     V2.0.125
+// @ConfigVersion     V2.0.126
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
