--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,13 +5,13 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023-08-13
+// @UpdateTime        2023-08-20
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：218）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @APPList           无法通过𝐌𝐈𝐓𝐌去广告的应用：银行类[Most]|抖音|蜂巢|小米运动|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|携程旅行[APP]
+// @APPList           无法𝐌𝐈𝐓𝐌的应用：银行类[绝大部分]|抖音|蜂巢|滴答清单|Taio|小米运动|有条下载|Fileball|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|携程旅行[APP]|凯叔讲故事|七猫小说|醒图|剪映|潮汐|不背单词
 // @Attention         如果广告仍然存在，请『卸载应用』重新安装，还是不行则表示『规则里没有或已失效』
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -39,7 +39,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.08.13/v2.0.338 url reject-200
+^https?:\/\/2023.08.20/v2.0.339 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
