--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-09-18
+// @UpdateTime        2023-09-28
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.89
+// @Version           V2.0.90
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -91,6 +91,7 @@
 # [+]2023-07-05  73、移除微博帖子下方的贴片广告[忘了更新日志，补上]
 # [+]2023-08-11  74、移除微博国际版趋势页下的热门影片，恢复方法，打开解析器重写后面添加#out=v_f即可
 # [+]2023-09-18  75、移除微博国际版帖子详情页下方的Ad—banner
+# [+]2023-09-28  76、移除微博首页顶部的homeExtend，例如华为Mate60，并添加一条微博去广告重写
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
@@ -99,7 +100,10 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
 
-
+# > 微博国际版_AD_Preload@ddgksf2013
+^https?:\/\/api\.weibo\.cn\/\d\/ad\/preload url reject-dict
+# > 微博_首页顶部homeExtend@ddgksf2013
+^https?:\/\/api\.weibo\.cn\/\d\/groups\/allgroups\/v\d url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_帖子下方广告banner@ddgksf2013
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=open_app url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_趋势页热门影片@ddgksf2013
