--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -40,7 +40,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.10.26/v2.0.361 url reject-200
+^https?:\/\/2023.10.26/v2.0.362 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -245,7 +245,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 ^https?:\/\/api4\.bybutter\.com\/v\d\/app\/placements\/\d\/advertisements url reject
 # > hanglvzongheng
 ^https?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
-^http:\/\/(114\.115\.217\.129)|(home\.umetrip\.com)\/gateway\/api\/umetrip\/native$ \r\nrpid: 10000(18|19) url-and-header reject
+^https?:\/\/(114\.115\.217\.129)|(home\.umetrip\.com)\/gateway\/api\/umetrip\/native$ url script-response-header https://github.com/ddgksf2013/Scripts/raw/master/hanglvzongheng.js
 # > hangzhougongjiao
 ^https?:\/\/m.ibuscloud.com\/v2\/app\/getStartPage url reject
 # > haohaozhu
