--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -11,7 +11,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：235）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Attention         请使用最新版QuantumultX，因为部分重写不兼容旧版QX，例如 url-and-header
+// @Attention         去除url-and-header写法，使部分重写兼容旧版QX，
 // @APPList           无法𝐌𝐈𝐓𝐌的应用：银行类[绝大部分]|抖音|蜂巢|滴答清单|Taio|小米运动|有条下载|Fileball|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|携程旅行[APP]|凯叔讲故事|七猫小说|醒图|剪映|潮汐|不背单词|高铁管家|咕咚运动|APTV|DayOne
 // @Attention         如果广告仍然存在，请『卸载应用』重新安装，还是不行则表示『规则里没有或已失效』
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
