--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -41,7 +41,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.12.25/v2.0.381 url reject-200
+^https?:\/\/2023.12.25/v2.0.382 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -627,7 +627,7 @@ https://support.you.163.com/appversync/check.do url reject
 # > xiaoyuankousuan
 ^https?:\/\/.*yuanfudao\.com\/leo-mis\/iphone\/splashes url reject
 # > xiangrikui
-^https?:\/\/client-api-v2\.oray\.com\/materials\/(SLCC_IOS_STARTUP_ADV|SLCC_iOS_DEVICE_FREE|SLCC_iOS_DEVICE_LIST_ADV|SLCC_IOS_DEVICE_ADV|SUNLOGIN_CLIENT_IOS_PROMOTION|SLCC_IOS_DEVICE) url reject
+^https?:\/\/client-api-v2\.oray\.com\/materials\/(SLCC_IOS_STARTUP_ADV|SLCC_iOS_DEVICE_FREE|SLCC_iOS_DEVICE_LIST_ADV|SLCC_IOS_DEVICE_ADV|SUNLOGIN_CLIENT_IOS_PROMOTION|SLCC_IOS_DEVICE|SLCC_IOS_STARTUP) url reject
 
 
 # ======= Y ======= #
