--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -10,7 +10,7 @@
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.92
+// @Version           V2.0.93
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -92,7 +92,7 @@
 # [+]2023-08-11  74、移除微博国际版趋势页下的热门影片，恢复方法，打开解析器重写后面添加#out=v_f即可
 # [+]2023-09-18  75、移除微博国际版帖子详情页下方的Ad—banner
 # [+]2023-09-28  76、移除微博首页顶部的homeExtend，例如华为Mate60，并添加一条微博去广告重写
-# [+]2024-01-05  77、移除微博搜索页面‘微博热搜CARD’下方的视频广告CARD
+# [+]2024-01-05  77、移除微博搜索页面‘微博热搜CARD’下方的出框广告
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
