--- a/Html/Douban.conf
+++ b/Html/Douban.conf
@@ -8,7 +8,7 @@
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        2024-01-31
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Function          豆瓣电影移动版网页增强，快捷跳转茶杯狐搜索，豆瓣移动版网页去广告
+// @Function          豆瓣电影移动版网页增强，快捷跳转搜片搜索，豆瓣移动版网页去弹窗广告
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Html/Douban.conf
 // ==/UserScript==
 
