--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -42,7 +42,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.02.04/v2.0.404 url reject-200
+^https?:\/\/2024.02.04/v2.0.405 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -212,7 +212,7 @@ https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNot
 # > fengyunxing
 ^https?:\/\/carapp\.gtmc\.com\.cn\/api\/appgtmc\/homePage\/HomePageAction\/queryHomePageImg\.json url reject
 # > feimaoguanjia
-^https?:\/\/app\.flymodem\.com\.cn\/Appapi\/Public\/welecome url reject
+^https?:\/\/app\.flymodem\.com\.cn\/Appapi\/Public\/welecome url reject-200
 
 
 # ======= G ======= #
