--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.02.13/v2.0.413 url reject-200
+^https?:\/\/2024.02.13/v2.0.414 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -187,7 +187,7 @@ https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNot
 # > dedao
 ^https?:\/\/entree-ws\.igetget\.com\/oms\/front\/start\/push url reject
 # > dingdongmaicai
-^https?:\/\/maicai\.api\.ddxq\.mobi\/advert\/getAd url response-body _time":\d{2} response-body _time":40
+^https?:\/\/maicai\.api\.ddxq\.mobi\/advert\/getAd url response-body ads" response-body ddgksf2013"
 ^https?:\/\/maicai\.api\.ddxq\.mobi\/(advert|vip)\/get(VipAd|PreloadAd) url reject-200
 
 
