--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.02.17/v2.0.419 url reject-200
+^https?:\/\/2024.02.17/v2.0.420 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -273,7 +273,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # > haoqing
 ^https?:\/\/restapi\.iyunmai\.com\/ad-api\/ url reject
 # > huaerjiejianwen
-^https?:\/\/api-one-wscn\.awtmt\.com\/apiv\d\/advertising\/ads url reject-dict
+^https?:\/\/api-one-wscn\.awtmt\.com\/apiv\d\/advertising\/ads url reject-200
 
 
 # ======= I ======= #
