--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -103,7 +103,7 @@ hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.
 ^https?:\/\/api\.bili(api|bili)\.(net|com)\/pgc\/season\/app\/related\/recommend\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_点击追番Card@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/ogv\/cards url reject-dict
-# ～ BiliBili_哔哩哔哩_屏蔽4480端口@kokoryh[白B有问题]
+# ～ BiliBili_哔哩哔哩_屏蔽4480端口[白B有问题]@kokoryh
 #^http:\/\/.*:4480\/upgcxcode url reject-200
 
 
