--- a/AdBlock/FreeStreamAds.conf
+++ b/AdBlock/FreeStreamAds.conf
@@ -11,7 +11,7 @@
 // @Function          去广告配置（自用，持续更新...）
 // @Suitable          自行观看"# > "注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.26
+// @Version           V1.0.3
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/FreeStreamAds.conf
 // ==/UserScript==
 
@@ -21,5 +21,5 @@
 
 
 
-^http:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}(:\d+)?\/.*?\/v\d\/(version|http://1k.953365.cn/zhuijuos.php/v6/notice\?|top_notice\?|advert\?position=[^2]+) url reject-200
+^http:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}(:\d+)?\/.*?\/v\d\/(version|notice\?|top_notice\?|advert\?position=[^2]+) url reject-200
 
