--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.02.29/v2.0.430 url reject-200
+^https?:\/\/2024.02.29/v2.0.431 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -75,7 +75,7 @@
 ^http:\/\/amdc\.m\.taobao\.com url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amdc.js
 # > ahfs
 ^https?:\/\/.*(xbwpys|ahhhhfs)\.com\/($|[0-9a-zA-Z_/]+\/$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ahfs.js
-# > 
+# > aastocks
 ^http:\/\/.*aastocks\.com\/ad\/ url reject-200
 
 
