--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -348,7 +348,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject-200
 # ======= K ======= #
 
 # > kfc
-^https?:\/\/res.kfc.com.cn\/(CRM\/kfcad|advertisement\/) url reject-200
+^https?:\/\/res.kfc.com.cn\/(CRM\/1kfcad|advertisement\/) url reject-200
 # > kuaikan
 ^https?:\/\/api.kkmh.com\/v\d\/(ad|advertisement)\/ url reject-200
 # > ku'an
