--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.03.11/v2.0.445 url reject-200
+^https?:\/\/2024.03.11/v2.0.446 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -76,7 +76,7 @@
 # > ahfs
 ^https?:\/\/.*(xbwpys|ahhhhfs)\.com\/($|[0-9a-zA-Z_/]+\/$) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ahfs.js
 # > aastocks
-^http:\/\/.*aastocks\.com\/ad\/ url reject-200
+^https?:\/\/.*aastocks\.com\/ad\/ url reject-200
 
 
 # ======= B ======= #
