--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.03.25/v2.0.458 url reject-200
+^https?:\/\/2024.03.25/v2.0.459 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -489,8 +489,9 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/slapi\.oray\.net\/adver url reject-200
 # > one
 ^https?:\/\/api\.21ec74\.com\/v2\.5\/ad url reject-200
-# > ocleancare
-^https?:\/\/careapi.oclean.com\/mall\/v\d\/Temporary\/SafetyGetStartAdvert url reject-200
+# > ocleancare*
+^https?:\/\/careapi\.oclean\.com\/mall\/v\d\/User\/GetUserCenter url response-body banner" response-body ddgksf2013"
+^https?:\/\/careapi\.oclean\.com\/mall\/v\d\/Temporary\/SafetyGetStartAdvert url reject-200
 
 
 # ======= P ======= #
