--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.03.27/v2.0.461 url reject-200
+^https?:\/\/2024.03.27/v2.0.462 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -774,7 +774,7 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject-200
 ^https?:\/\/api\.ys7\.com\/api\/ads url reject-200
 # > youdaocidian
 ^https?:\/\/cdke\.youdao\.com\/course3\/recommend\/dict\/startup url reject-200
-^https?:\/\/gorgon\.youdao\.com\/gorgon\/brand\/prefetch\.s url reject-200
+^https?:\/\/gorgon\.youdao\.com\/gorgon url reject-200
 
 
 # ======= Z ======= #
